test_src/compiler_errors/types/binary/RightShiftFloatError1.b
class RightShiftFloatError1 {
    void test() {
        println(14.0 >> 42);
    }
}
